Implemented fast session switching for same-day sessions.
If there is more than one session on the same day, when taking attendance
a dropdown list will allow to switch over sessions easily.

Also fixed some XHTML compliance tags.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+2011-01-18  lrlopez
+
+        * attendances.php: styles.php:
+
+        Implemented fast session switching for same-day sessions.
+        Fixed some XHTML compliance tags (more coming)
+
+        * lang/: en_utf8/attforblock.php, es_utf8/attforblock.php:
+
+        Added new strings for the dropdown menus.
+
 2011-01-16  lrlopez
 
         * export.php: export_form.php:
